--- a/fastlane/changelog.txt
+++ b/fastlane/changelog.txt
@@ -1,10 +1,12 @@
+HOTFIX because fixing Go broke running commands in the background with "&". Previous release notes pasted below.
+
 New stuff:
 - Pressing the spacebar or using force touch on the keyboard and then dragging simulates arrow key presses
 - Go programs get off the ground
 - git-annex mostly works
-- You can mount directories from the Files app in iSH, using mount -t ios foo <destination>
+- You can mount directories from the Files app in iSH, using mount -t ios foo destination
 
-More on that last thing: The command is `mount -t ios <source> <destination>`. The `<source>` is ignored, the `<destination>` is where to mount the directory. This will pop up a directory picker, and mount the directory you selected. Not all file providers support selecting directories. iCloud Drive, local files ("On My iPad"), and Working Copy are known to work.
+More on that last thing: The command is `mount -t ios source destination`. The `source` is ignored, the `destination` is where to mount the directory. This will pop up a directory picker, and mount the directory you selected. Not all file providers support selecting directories. iCloud Drive, local files ("On My iPad"), and Working Copy are known to work.
 
 Fixed bugs:
 - writev not being atomic, which caused a race condition on mtr startup
