--- a/fastlane/changelog.txt
+++ b/fastlane/changelog.txt
@@ -1,5 +1,4 @@
-Bug fixes and stability improvements!
-- Recovery mode now allows you to make the app open straight into settings, so you can still change settings if the app crashes on launch
-- Fixed node/npm segfaulting randomly
-- Fixed crash if the filesystem's root can't be opened, which would happen when importing an Ubuntu Base rootfs (now shows an error instead)
-- Importing a filesystem now always creats a root inode
+New stuff:
+- You can change the app icon! Also includes a link to submit your own app icon designs.
+
+that's about it
