--- a/fastlane/changelog.txt
+++ b/fastlane/changelog.txt
@@ -1,8 +1,5 @@
-New stuff:
-- About page shows the app version at the bottom
-- The default rootfs no longer includes apk, to match the app store version
-
 Fixed bugs:
-- Status bar being invisible when the device is in dark mode and the terminal has a light background
+- Crash when trying to boot or import a filesystem after closing and reopening the filesystems page
+- Crash in the file provider when you open it before opening the app for the first time
 
 iSH is on the app store now! https://apps.apple.com/us/app/ish-shell/id1436902243
